Added defaualt namespace

--- a/fleet.yaml
+++ b/fleet.yaml
@@ -1,3 +1,6 @@
+# The default namespace to be applied to resources. 
+defaultNamespace: cert-manager 
+
 # Custom helm options
 helm:
   # The release name to use. If empty a generated release name will be used
