Enable CRDs via values.yaml

--- a/values.yaml
+++ b/values.yaml
@@ -3,14 +3,17 @@
 # This is helpful when installing cert manager as a chart dependency (sub chart).
 namespace: cert-manager
 
-crds:
-  # This option decides if the CRDs should be installed
-  # as part of the Helm installation.
-  enabled: true
+# This option is equivalent to setting crds.enabled=true and crds.keep=true.
+installCRDs: false
 
-  # This option makes it so that the "helm.sh/resource-policy": keep
-  # annotation is added to the CRD. This will prevent Helm from uninstalling
-  # the CRD when the Helm release is uninstalled.
-  # WARNING: when the CRDs are removed, all cert-manager custom resources
-  # (Certificates, Issuers, ...) will be removed too by the garbage collector.
-  keep: true
+# crds:
+#   # This option decides if the CRDs should be installed
+#   # as part of the Helm installation.
+#   enabled: true
+
+#   # This option makes it so that the "helm.sh/resource-policy": keep
+#   # annotation is added to the CRD. This will prevent Helm from uninstalling
+#   # the CRD when the Helm release is uninstalled.
+#   # WARNING: when the CRDs are removed, all cert-manager custom resources
+#   # (Certificates, Issuers, ...) will be removed too by the garbage collector.
+#   keep: true
